# plexparty

./: docker-compose.yml
api/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
api/src/: server.ts
api/src/schema/: resolvers.ts  typeDefs.ts
app/: .gitignore  Dockerfile  nuxt.config.ts  package-lock.json  package.json
app/components/: AppFooter.vue  AppHeader.vue  MovieCard.vue
app/layouts/: default.vue
app/pages/: index.vue
app/queries/: getMovies.ts
setup/: .gitignore  Dockerfile  pyproject.toml
setup/plexparty_setup/: load_data.py
